# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  gediff_json_style.cast  generate_diff_yaml.cast  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  comparator.py  file_parsing.py  formatter.py  gendiff_proc.py  gendiff_processing.py
gendiff/formatter/: json.py  plain.py  stylish.py
gendiff/scripts/: comparator.py  file_parsing.py  gendiff.py  gendiff_processing.py
tests/: conftest.py  test_comparator.py  test_file_parsing.py  test_formatter.py  test_gendiff_proc.py  test_gendiff_processing.py
tests/formatter/: test_json.py  test_plain.py  test_stylish.py
tests/formatters/: test_json.py  test_plain.py  test_stylish.py
tests/scripts/: test_comparator.py  test_file_parsing.py  test_gendiff_processing.py
tests/test_data/: gendiff_json_expected.txt
