[project]
name = "hexlet-code"
version = "0.1.0"
authors = [
    {name = "Igor Komrachkov", email = "ikomrachkov@mail.ru"},
]
description = "Gendiff project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
