[project]
name = "hexlet-code"
version = "0.1.0"
authors = [
    {name = "Igor Komrachkov", email = "ikomrachkov@mail.ru"},
]
description = "Gendiff project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.2",
    "ruff<=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
